比較登録処理作成
